Explicit width and height for eyeball and x icons to prevent list items from being clipped once the images load

--- a/src/css/bank.css
+++ b/src/css/bank.css
@@ -77,7 +77,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3ffffff', e
 .bank li.item ul.palette li {float:left;}
 .bank ul.category {  overflow:auto; }
 .bank ul.category li h3 {display:block; clear:both; float:none;}
-img.bank-item-img { display:block; height: 14px; width:auto;}
+img.bank-item-img { display:block; }
+img.hideReg { height: 14px; width: 20px; }
+.bank img.close { height: 14px; width: 14px; }
 
 
 
